# rusty-req

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh.md  pyproject.toml  sync_version.py
.github/workflows/: build.yml  cross-platform-test.yml  performance_benchmark.py  performance_benchmark.yml  release.yml  test-rusty-req.yml
src/: debug.rs  lib.rs
src/network/: http_version.rs  mod.rs  proxy_config.rs  ssl_verify.rs
src/request/: concurrency.rs  config.rs  executor.rs  mod.rs  request_item.rs
src/utils/: mod.rs  py_to_json.rs  time.rs
tests/: performance_test.py
