[package]
name = "rusty-req"
version = "0.1.9"
edition = "2021"

[lib]
# 关键修改：声明为动态库，并启用 PyO3 的 abi3 模式
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
chrono = "0.4"
futures = "0.3"
once_cell = "1.18"

[dependencies.pyo3]
version = "0.25.1"
features = ["extension-module", "abi3-py37"]  # 启用 abi3 支持 Python ≥ 3.7

[dependencies.pyo3-asyncio]
version = "0.20"
features = ["tokio-runtime"]

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.reqwest]
version = "0.11"
features = ["json", "brotli", "gzip", "deflate", "stream"]