[package]
name = "rusty-req"
version = "0.3.1"
edition = "2021"
license = "MIT"

[dependencies]
serde_json = "1.0"
chrono = "0.4"
futures = "0.3"
once_cell = "1.18"

[dependencies.pyo3]
version = "0.20"
features = [ "extension-module", "abi3-py37",]

[dependencies.pyo3-asyncio]
version = "0.20"
features = [ "tokio-runtime",]

[dependencies.tokio]
version = "1.0"
features = [ "full",]

[dependencies.reqwest]
version = "0.11"
features = [ "json", "brotli", "gzip", "deflate", "stream",]

[package.metadata.maturin]
supported-python-versions = [ "3.9", "3.10", "3.11", "3.12", "3.13"]
