[build-system]
requires = [ "maturin>=1.9.2",]
build-backend = "maturin"

[project]
name = "rusty-req"
version = "0.4.21"
description = "⚡ High-performance async HTTP client in Rust with Python bindings for blazing-fast batch requests."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [ "Programming Language :: Python", "Programming Language :: Python :: 3", "Programming Language :: Rust", "Operating System :: Microsoft :: Windows", "Operating System :: POSIX :: Linux", "Operating System :: MacOS :: MacOS X", "License :: OSI Approved :: MIT License", ]
[[project.authors]]
name = "KAY53N"
email = "kaysen820@gmail.com"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/KAY53N/rusty-req"
Repository = "https://github.com/KAY53N/rusty-req"
"Bug Tracker" = "https://github.com/KAY53N/rusty-req/issues"
Documentation = "https://github.com/KAY53N/rusty-req#readme"

[tool.maturin]
bindings = "pyo3"
module-name = "rusty_req"
include = [ "rusty_req.pyi", "README.md", "README.zh.md", "CHANGELOG.md",]
